--- a/src/main/resources/security_update.html
+++ b/src/main/resources/security_update.html
@@ -22,7 +22,7 @@
         let primary_boardid = document.querySelector('#primary_boardid');
         let marketprice_boardid = document.querySelector('#marketprice_boardid');
         let xhr = new XMLHttpRequest();
-        let url = '/security/add/new';
+        let url = '/security/update/parameters';
         xhr.open("POST", url, true);
         xhr.setRequestHeader('Content-type', 'application/json;charset=utf-8');
         var data = JSON.stringify({ "secid": secid.value == '' ? 'null' : secid.value, "shortname": shortname.value == '' ? 'null' : shortname.value, "regnumber": regnumber.value == '' ? 'null' : regnumber.value, "name": name.value== '' ? 'null' : name.value, "isin": isin.value== '' ? 'null' : isin.value, "is_traded": is_traded.value== '' ? 0 : is_traded.value, "emitent_id": emitent_id.value== '' ? 0 : emitent_id.value, "emitent_title": emitent_title.value== '' ? 'null' : emitent_title.value, "emitent_inn": emitent_inn.value== '' ? 'null' : emitent_inn.value, "emitent_okpo": emitent_okpo.value== '' ? 'null' : emitent_okpo.value, "gosreg": gosreg.value== '' ? 'null' : gosreg.value, "type": type.value == '' ? 'null' : type.value, "group": group.value== '' ? 'null' : group.value, "primary_boardid": primary_boardid.value== '' ? 'null' : primary_boardid.value, "marketprice_boardid": marketprice_boardid.value== '' ? 'null' : marketprice_boardid.value, "history": [] });
@@ -35,12 +35,13 @@
 
     }
 
+
 </script>
 <body>
 <div id="header">
-    <h1> Добавить информацию по ценной бумаге</h1>
+    <h1> Обновить информацию по ценной бумаге</h1>
 
-    <p><b>Ввести информацию по ценной бумаге</b><Br>
+    <p><b>Ввести новую информацию по ценной бумаге</b><Br>
     <p><input type="text" id="secid" placeholder="secid"> <Br>
     <p><input type="text" id="shortname" placeholder="shortname"> <Br>
     <p><input type="text" id="regnumber" placeholder="regnumber"> <Br>
