--- a/src/main/resources/security.html
+++ b/src/main/resources/security.html
@@ -8,28 +8,30 @@
 <div id="header">
     <h1>Информация по ценным бумагам Московской биржи</h1>
     <p><a href="/security/add">Добавить новую ценную бумагу</a></p>
+    <p><a href="/security/add/all">Добавить информацию о ценных бумагах из файла *.xml</a></p>
+
 
     <form action="/security/read" method="get">
         <p><b>Вывести информацию по ценной бумаге</b><Br>
-        <p><input type="text" name="secid">Ввести тикер<Br>
+        <p><input type="text" name="secid" required>Ввести тикер<Br>
         <p><input type="submit" value="Вывести"></p>
     </form>
 
     <form action="/security/update" method="get">
         <p><b>Обновить информацию по ценной бумаге</b><Br>
-        <p><input type="text" name="secid">Ввести тикер бумаги<Br>
+        <p><input type="text" name="secid" required >Ввести тикер бумаги<Br>
         <p><input type="submit" value="Обновить"></p>
     </form>
 
     <form action="/security/delete" method="get">
         <p><b>Удалить бумагу по значению тикера</b><Br>
-        <p><input type="text" name="secid">Ввести тикер бумаги<Br>
+        <p><input type="text" name="secid" required>Ввести тикер бумаги<Br>
         <p><input type="submit" value="Удалить"></p>
     </form>
 
     <form action="/security/history" method="get">
         <p><b>Вывести все операции по ценной бумаге</b><Br>
-        <p><input type="text" name="secid">Ввести тикер бумаги<Br>
+        <p><input type="text" name="secid" required>Ввести тикер бумаги<Br>
         <p><input type="submit" value="Вывести"></p>
     </form>
 
@@ -43,6 +45,8 @@
         <p><input type="number" name="offset" value="0">Начальный элемент</p>
         <p><input type="submit" value="Submit"></p>
     </form>
+
+
 </div>
 </body>
 </html>
