--- a/src/main/resources/transaction.html
+++ b/src/main/resources/transaction.html
@@ -8,22 +8,23 @@
 <div id="header">
     <h1>Информация об истории операций по ценным бумагам Московской биржи</h1>
     <p><a href="/transaction/add">Добавить новую операцию по ценной бумаге</a></p>
+    <p><a href="/transaction/add/all">Добавить информацию об операциях по ценным бумагам из файла *.xml</a></p>
 
     <form action="/security/history" method="get">
         <p><b>Вывести все операции по ценной бумаге</b><Br>
-        <p><input type="text" name="secid">Ввести тикер<Br>
+        <p><input type="text" name="secid" required>Ввести тикер<Br>
         <p><input type="submit" value="Вывести"></p>
     </form>
 
     <form action="/transaction/update" method="get">
         <p><b>Обновить информацию об операции по ценной бумаге</b><Br>
-        <p><input type="number" name="secid">Ввести id операции<Br>
+        <p><input type="number" name="id" required>Ввести id операции<Br>
         <p><input type="submit" value="Обновить"></p>
     </form>
 
     <form action="/transaction/delete" method="get">
         <p><b>Удалить операцию по ценной бумаге по номеру id</b><Br>
-        <p><input type="number" name="id">Ввести id операции <Br>
+        <p><input type="number" name="id" required>Ввести id операции <Br>
         <p><input type="submit" value="Удалить"></p>
     </form>
 
