pivot_table.html change tradedate field

--- a/src/main/resources/pivot_table.html
+++ b/src/main/resources/pivot_table.html
@@ -24,7 +24,8 @@
             <input type="radio" name="filter_parameter" value="emitent_title" > emitent_title<Br>
             <input type="radio" name="filter_parameter" value="tradedate" > tradedate<Br>
         </p>
-        <p><input type="text" name="filter_parameter_value" >Введите значение для параметра фильтрации<Br>
+        <p><input type="text" name="filter_parameter_value" >Введите значение для параметра фильтрации emitent_title<Br>
+        <p><input type="date" name="filter_parameter_value" >Введите значение для параметра фильтрации tradedate<Br>
 
 
 
