--- a/src/main/resources/transaction_add_all.html
+++ b/src/main/resources/transaction_add_all.html
@@ -1,4 +1,4 @@
-<html meta charset="UTF-8">
+<html charset="UTF-8" meta>
 <head>
     <title>Московская биржа</title>
 </head>
@@ -8,7 +8,7 @@
 
     <form enctype="multipart/form-data" method="post">
         <p><b>Загрузить информацию об операциях</b></p>
-        <p><input type="file" name="f" accept="text/xml">
+        <p><input accept="text/xml" name="f" type="file">
             <input type="submit" value="Отправить"></p>
     </form>
 </div>
