--- a/src/main/resources/transaction.html
+++ b/src/main/resources/transaction.html
@@ -1,4 +1,4 @@
-<html meta charset="UTF-8">
+<html charset="UTF-8" meta>
 <head>
     <title>Московская биржа</title>
 
@@ -12,31 +12,31 @@
 
     <form action="/security/history" method="get">
         <p><b>Вывести все операции по ценной бумаге</b><Br>
-        <p><input type="text" name="secid" required>Ввести тикер<Br>
+        <p><input name="secid" required type="text">Ввести тикер<Br>
         <p><input type="submit" value="Вывести"></p>
     </form>
 
     <form action="/transaction/update" method="get">
         <p><b>Обновить информацию об операции по ценной бумаге</b><Br>
-        <p><input type="number" name="id" required>Ввести id операции<Br>
+        <p><input name="id" required type="number">Ввести id операции<Br>
         <p><input type="submit" value="Обновить"></p>
     </form>
 
     <form action="/transaction/delete" method="get">
         <p><b>Удалить операцию по ценной бумаге по номеру id</b><Br>
-        <p><input type="number" name="id" required>Ввести id операции <Br>
+        <p><input name="id" required type="number">Ввести id операции <Br>
         <p><input type="submit" value="Удалить"></p>
     </form>
 
     <form action="/transaction/list" method="get">
         <p><b>Вывести все операции по ценным бумагам</b><Br>
         <p>Выберите параметр для сортировки:<Br>
-            <input type="radio" name="sort_parameter" value="id" > Id<Br>
-            <input type="radio" name="sort_parameter" value="secid" > Тикер (secid)<Br>
-            <input type="radio" name="sort_parameter" value="tradedate"> Дата операции<Br>
+            <input name="sort_parameter" type="radio" value="id"> Id<Br>
+            <input name="sort_parameter" type="radio" value="secid"> Тикер (secid)<Br>
+            <input name="sort_parameter" type="radio" value="tradedate"> Дата операции<Br>
         </p>
-        <p><input type="number" name="limit" value="10">Количество выводимых данных<Br>
-        <p><input type="number" name="offset" value="0">Начальный элемент</p>
+        <p><input name="limit" type="number" value="10">Количество выводимых данных<Br>
+        <p><input name="offset" type="number" value="0">Начальный элемент</p>
         <p><input type="submit" value="Submit"></p>
     </form>
 </div>
