refactor sort_parameter to sort_by

--- a/src/main/resources/security.html
+++ b/src/main/resources/security.html
@@ -38,8 +38,8 @@
     <form action="/security/list" method="get">
         <p><b>Вывести список ценных бумаг</b><Br>
         <p>Выберите параметр для сортировки:<Br>
-            <input name="sort_parameter" type="radio" value="secid"> Тикер (secid)<Br>
-            <input name="sort_parameter" type="radio" value="emitent_title"> Название эмитента (emitent_title)<Br>
+            <input name="sort_by" type="radio" value="secid"> Тикер (secid)<Br>
+            <input name="sort_by" type="radio" value="emitent_title"> Название эмитента (emitent_title)<Br>
         </p>
         <p><input name="limit" type="number" value="10">Количество выводимых данных<Br>
         <p><input name="offset" type="number" value="0">Начальный элемент</p>
