--- a/src/main/resources/pivot_table.html
+++ b/src/main/resources/pivot_table.html
@@ -11,21 +11,21 @@
     <form action="/pivot_table/list" method="get">
         <p><b>Вывести все операции по ценным бумагам</b><Br>
         <p>Выберите параметр для сортировки:<Br>
-            <input name="sort_parameter" type="radio" value="secid"> secid<Br>
-            <input name="sort_parameter" type="radio" value="regnumber"> regnumber<Br>
-            <input name="sort_parameter" type="radio" value="name"> name<Br>
-            <input name="sort_parameter" type="radio" value="emitent_title"> emitent_title<Br>
-            <input name="sort_parameter" type="radio" value="tradedate"> tradedate<Br>
-            <input name="sort_parameter" type="radio" value="numtrades"> numtrades<Br>
-            <input name="sort_parameter" type="radio" value="open"> open<Br>
-            <input name="sort_parameter" type="radio" value="close"> close<Br>
+            <input name="sort_by" type="radio" value="secid"> secid<Br>
+            <input name="sort_by" type="radio" value="regnumber"> regnumber<Br>
+            <input name="sort_by" type="radio" value="name"> name<Br>
+            <input name="sort_by" type="radio" value="emitent_title"> emitent_title<Br>
+            <input name="sort_by" type="radio" value="tradedate"> tradedate<Br>
+            <input name="sort_by" type="radio" value="numtrades"> numtrades<Br>
+            <input name="sort_by" type="radio" value="open"> open<Br>
+            <input name="sort_by" type="radio" value="close"> close<Br>
         </p>
         <p>Выберите параметр для фильтрации:<Br>
-            <input name="filter_parameter" type="radio" value="emitent_title"> emitent_title<Br>
-            <input name="filter_parameter" type="radio" value="tradedate"> tradedate<Br>
+            <input name="filter_by" type="radio" value="emitent_title"> emitent_title<Br>
+            <input name="filter_by" type="radio" value="tradedate"> tradedate<Br>
         </p>
-        <p><input name="filter_parameter_value" type="text">Введите значение для параметра фильтрации emitent_title<Br>
-        <p><input name="filter_parameter_value" type="date">Введите значение для параметра фильтрации tradedate<Br>
+        <p><input name="filter_value" type="text">Введите значение для параметра фильтрации emitent_title<Br>
+        <p><input name="filter_value" type="date">Введите значение для параметра фильтрации tradedate<Br>
 
 
         <p><input name="limit" type="number" value="10">Количество выводимых данных<Br>
