--- a/src/main/resources/transaction.html
+++ b/src/main/resources/transaction.html
@@ -31,9 +31,9 @@
     <form action="/transaction/list" method="get">
         <p><b>Вывести все операции по ценным бумагам</b><Br>
         <p>Выберите параметр для сортировки:<Br>
-            <input name="sort_parameter" type="radio" value="id"> Id<Br>
-            <input name="sort_parameter" type="radio" value="secid"> Тикер (secid)<Br>
-            <input name="sort_parameter" type="radio" value="tradedate"> Дата операции<Br>
+            <input name="sort_by" type="radio" value="id"> Id<Br>
+            <input name="sort_by" type="radio" value="secid"> Тикер (secid)<Br>
+            <input name="sort_by" type="radio" value="tradedate"> Дата операции<Br>
         </p>
         <p><input name="limit" type="number" value="10">Количество выводимых данных<Br>
         <p><input name="offset" type="number" value="0">Начальный элемент</p>
